; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/acpica/extr_acpi_pcib_pci.c_acpi_pcib_pci_route_interrupt.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/acpica/extr_acpi_pcib_pci.c_acpi_pcib_pci_route_interrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_pcib_softc = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @acpi_pcib_pci_route_interrupt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @acpi_pcib_pci_route_interrupt(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.acpi_pcib_softc*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %9 = load i32, i32* %5, align 4
  %10 = call %struct.acpi_pcib_softc* @device_get_softc(i32 %9)
  store %struct.acpi_pcib_softc* %10, %struct.acpi_pcib_softc** %8, align 8
  %11 = load %struct.acpi_pcib_softc*, %struct.acpi_pcib_softc** %8, align 8
  %12 = getelementptr inbounds %struct.acpi_pcib_softc, %struct.acpi_pcib_softc* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32*, i32** %13, align 8
  %15 = icmp eq i32* %14, null
  br i1 %15, label %16, label %21

16:                                               ; preds = %3
  %17 = load i32, i32* %5, align 4
  %18 = load i32, i32* %6, align 4
  %19 = load i32, i32* %7, align 4
  %20 = call i32 @pcib_route_interrupt(i32 %17, i32 %18, i32 %19)
  store i32 %20, i32* %4, align 4
  br label %28

21:                                               ; preds = %3
  %22 = load i32, i32* %5, align 4
  %23 = load i32, i32* %6, align 4
  %24 = load i32, i32* %7, align 4
  %25 = load %struct.acpi_pcib_softc*, %struct.acpi_pcib_softc** %8, align 8
  %26 = getelementptr inbounds %struct.acpi_pcib_softc, %struct.acpi_pcib_softc* %25, i32 0, i32 0
  %27 = call i32 @acpi_pcib_route_interrupt(i32 %22, i32 %23, i32 %24, %struct.TYPE_2__* %26)
  store i32 %27, i32* %4, align 4
  br label %28

28:                                               ; preds = %21, %16
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}

declare dso_local %struct.acpi_pcib_softc* @device_get_softc(i32) #1

declare dso_local i32 @pcib_route_interrupt(i32, i32, i32) #1

declare dso_local i32 @acpi_pcib_route_interrupt(i32, i32, i32, %struct.TYPE_2__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
